--- a/package.json
+++ b/package.json
@@ -2,21 +2,42 @@
   "name": "fcc-library",
   "version": "0.0.1",
   "description": "boilerplate",
-  "main": "server.js",
+  "main": "dist/app.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "tsc && node ./dist/app.js",
+    "dev": "npm run lint && npm run watch",
+    "lint": "tslint --project .",
+    "watch": "nodemon --watch './**/*.ts' --ignore 'src/**/*.spec.ts' --exec 'ts-node' app.ts",
+    "build": "tsc"
   },
   "dependencies": {
-    "express": "^4.14.0",
-    "cors": "^2.8.5",
+    "@types/cors": "^2.8.6",
+    "@types/express": "^4.17.1",
+    "@types/helmet": "0.0.45",
+    "@types/shortid": "0.0.29",
+    "@types/uuid": "^3.4.5",
+    "@types/validator": "^12.0.1",
     "body-parser": "^1.19.0",
     "chai": "^4.2.0",
-    "mongodb": "^3.2.7",
     "chai-http": "^4.3.0",
-    "mocha": "^6.2.0",
-    "zombie": "^6.1.4",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "helmet": "^3.20.0",
-    "mongoose": "^5.6.8"
+    "mocha": "^6.2.0",
+    "mongodb": "^3.2.7",
+    "mongoose": "^5.6.8",
+    "node-json-db": "^1.0.3",
+    "reflect-metadata": "^0.1.13",
+    "shortid": "^2.2.15",
+    "validator": "^12.0.0",
+    "zombie": "^6.1.4"
+  },
+  "devDependencies": {
+    "@types/node": "^13.1.4",
+    "nodemon": "^2.0.2",
+    "ts-node": "^8.5.4",
+    "tslint": "^5.20.1",
+    "typescript": "^3.7.4"
   },
   "engines": {
     "node": "10"
